[package]
name = "rsh"
version = "0.1.1"
authors = ["Avvo Infrastructure Team <infrastructure@avvo.com>"]
license = "MIT"

[dependencies]
base64 = "0.6"
futures = "0.1"
getopts = "0.2"
lazy_static = "0.2"
nix = "0.9"
nom = "3.2"
reqwest = "0.7"
rpassword = "1.0"
termion = "1.5"
tokio-core = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
shell-escape = "0.1"
url = "1.5"
url_serde = "0.2"
users = "0.6"
websocket = "0.20"
