[package]
name = "rsh"
version = "0.1.2"
authors = ["Avvo Infrastructure Team <infrastructure@avvo.com>"]
license = "MIT"

[dependencies]
actix = "0.5"
actix-web = { version = "0.6", features = ["tls"] }
base64 = "0.9"
futures = "0.1"
getopts = "0.2"
lazy_static = "1.0"
nix = "0.10"
nom = "4.0"
reqwest = "0.8"
rpassword = "2.0"
termion = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
shell-escape = "0.1"
url = "1.7"
url_serde = "0.2"
users = "0.6"
